--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -3,5 +3,5 @@
 # target_link_libraries(compilerLib preprocessor linker vm)
 add_executable(compiler main.cpp)
 # target_link_libraries(compiler compilerLib)
-target_link_libraries(compiler preprocessor lexer CLI11::CLI11)#This will get removed when I finish the preprocessor
+target_link_libraries(compiler preprocessor lexer ast CLI11::CLI11)#This will get removed when I finish the preprocessor
 
