--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ add_subdirectory(extern/CLI11)
 add_subdirectory(extern/Catch2)
 include(extern/Catch2/extras/Catch.cmake)
 
-add_compile_options(-Wall -Wextra -Wno-unknown-pragmas)
+add_compile_options(-Wall -Wextra -Wno-unknown-pragmas -fconcepts-diagnostics-depth=6)
 add_subdirectory(common)
 link_libraries(common)
 add_subdirectory(preprocessor)#This is seperated out because both the linker and the compiler require it
