Basic pointer support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
         "typeindex": "cpp",
         "codecvt": "cpp",
         "filesystem": "cpp",
-        "ciso646": "cpp"
+        "ciso646": "cpp",
+        "source_location": "cpp"
     }
 }
