--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
         "codecvt": "cpp",
         "filesystem": "cpp",
         "ciso646": "cpp",
-        "source_location": "cpp"
+        "source_location": "cpp",
+        "*.inc": "cpp"
     }
 }
