--- a/lexer/CMakeLists.txt
+++ b/lexer/CMakeLists.txt
@@ -1,4 +1,5 @@
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 add_library(lexer STATIC ${SOURCES})
+target_link_libraries(lexer preprocessor)
 target_include_directories(lexer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 add_subdirectory(test)
