fix Wrapfunc. Add getBits to stdlib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,5 +76,7 @@
         "ciso646": "cpp",
         "source_location": "cpp",
         "*.inc": "cpp"
-    }
+    },
+    "lldb.displayFormat": "auto",
+    "lldb.dereferencePointers": true
 }
