Forgot what I did, but it isn't totally broken, so yay, new features!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "lldb",
             "request": "launch",
@@ -21,6 +22,7 @@
             "program": "${command:cmake.launchTargetPath}",
             "args": [
                 "testfile",
+                "testfile2",
                 // "--stdout"
             ],
             "stopAtEntry": false,
@@ -44,6 +46,26 @@
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        }
+        ,
+        {
+            "name": "Launch boilerplate",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${command:cmake.launchTargetPath}",
+            "args": ["SampleIn"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/modules",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
