To those who follow: this way lies madness

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,6 +1,6 @@
 #TODO: auto detect
 
-add_subdirectory(std)
+add_subdirectory(core)
 
 add_executable(boilerplate GenerateBoilerplate.cpp)
 target_link_libraries(boilerplate linker)
