more memory related functions

--- a/modules/core/core.template
+++ b/modules/core/core.template
@@ -10,3 +10,7 @@ getLine()->String
 getLine_raw()->int*
 malloc(int)->void*
 free(void*)
+realloc(void*,int)->void*
+memcpy(void*,void*,int)->void*
+memmove(void*,void*,int)->void*
+calloc(int,int)->void*
