--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,10 +21,10 @@
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
             "args": [
-                "-r",
-                "examples/hello_world.vwa.bc",
-                "--",
-                "test",
+                // "-r",
+                "examples/structs.vwa",
+                // "--",
+                // "test",
                 // "-i",
                 // "testfile",
                 // "testfile2",
