fix strings, fizzbuzz

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
             "program": "${command:cmake.launchTargetPath}",
             "args": [
                 // "-r",
-                "examples/structs.vwa",
+                "examples/fizzbuzz.vwa",
                 // "--",
                 // "test",
                 // "-i",
